--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,7 +1,7 @@
 /* global.css */
 
 
-/* Variables */
+/* Variables por defecto globales */
 :root {
   --color-background: #242424;
   --font-family: 'Inter', sans-serif;
