--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -3,8 +3,16 @@
     background: transparent;
     border: 1px solid white;
     border-radius: 3rem;
-    padding: 6px 22px;
+    padding: 10px 22px;
     color: white;
-    font-size: 0.8rem;
-    /* box-shadow: 2px 3px 4px rgba(0, 0, 0, 0.2); */
+    font-weight: bold;
+    font-size: 1rem;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+}
+.btn:hover{
+    background: white;
+    /* border: 1px solid #BD34FE; */
+    color: #BD34FE;
+    font-weight: 600;
+    
 }
