--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -1,7 +1,7 @@
 
 
 .containerNav{
-    background: #D9D9D9;
+    background: white;
     margin-left: 1rem;
     padding: 10px;
     display: flex;
