--- a/src/pages/AboutPage/AboutPage.module.css
+++ b/src/pages/AboutPage/AboutPage.module.css
@@ -6,5 +6,19 @@
 } */
 
 .info1{
+    margin-top: 1.8rem;
     display: flex;
+    
+    
+}
+
+.parrafo{
+    text-align: justify;
+    width: 70%;
+}
+
+.datos{
+    /* background: red; */
+    margin-left: 3rem;
+    width: 30%;
 }
