--- a/src/router/AppRouter.module.css
+++ b/src/router/AppRouter.module.css
@@ -1,10 +1,10 @@
 
 
 .containerContent{
-    background: #D9D9D9;
+    background: white;
     width: 70%;
     height: 100%;
-    padding: 5rem;
+    padding: 4rem;
     border-top-right-radius: 2rem;
     border-bottom-right-radius: 2rem;
 }
