--- a/src/components/Techs/Techs.module.css
+++ b/src/components/Techs/Techs.module.css
@@ -1,12 +1,20 @@
 
 
 .containerTechs{
-    margin-top: 15px;
+    margin-top: 1rem;
+    
 }
 
 .img{
     width: 3rem;
-    margin-right: 10px;
+    margin-right: 12px;
+    margin-bottom: 1rem;
+}
+.img2{
+    width: 3.7rem;
+    height: 3rem;
+    margin-right: 12px;
+    margin-bottom: 1rem;
 }
 
 
