--- a/src/styles/GLOBAL.module.css
+++ b/src/styles/GLOBAL.module.css
@@ -23,7 +23,7 @@
 .textTitleB{
     color: var(--color-text);
     font-size: 1.8rem;
-    font-weight: 600;
+    font-weight: 500;
 
 }
 .textTitleC{
@@ -39,4 +39,10 @@
 .subtitleB{
     color: var(--color-text);
     font-size: 13px;
+}
+.subtitleC{
+    color: var(--color-text2);
+    font-size: 14px;
+    font-weight: 500;
+    margin-bottom: 2px;
 }
