--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -51,3 +51,13 @@
   .tooltip:hover::before {
     opacity: 1;
   }
+
+
+
+  /* RESPONSIVE */
+@media (min-width: 992px) and (max-width: 1199.98px) {
+  .containerNav{
+    display: none;
+  }
+    
+}
