--- a/src/components/MoreInfo/MoreInfo.module.css
+++ b/src/components/MoreInfo/MoreInfo.module.css
@@ -31,3 +31,27 @@
     width: 100%;
     height: 100%;
 }
+
+
+
+
+  /* RESPONSIVE */
+  @media (min-width: 576px) and (max-width: 767.98px) {
+    .containerMoreInfo{
+        margin-top: 0.9rem;
+        width: 100%;
+        padding-left: 0;
+    }
+  }
+  
+
+  @media (max-width: 575.98px) {
+    .containerMoreInfo{
+        margin-top: 0.9rem;
+        width: 100%;
+        padding-left: 0;
+    }
+  }
+  
+  
+ 
