--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -12,7 +12,7 @@
 .link {
     text-decoration: none;
     color: #8f8f8f;
-  }
+}
 
 .active {
   color: #BD34FE;
@@ -52,11 +52,41 @@
     opacity: 1;
   }
 
+  .showResponsive{
+    display: none;
+  }
+
 
 
   /* RESPONSIVE */
-@media (min-width: 992px) and (max-width: 1199.98px) {
+@media (max-width: 1099.98px) {
   .containerNav{
+    flex-direction: row;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: #f0f0f0; /* Color de fondo, puedes ajustarlo */
+    display: flex;
+    justify-content: space-around; /* Ajusta el espacio entre los elementos */
+    padding: 10px; /* Espaciado interno */
+    box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.2);
+    margin-left: 0;
+    border-radius: 0;
+  }
+
+  .link {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .showResponsive{
+    display: inline-block;
+    font-size: 10px;
+  }
+
+  .tooltip::before {
     display: none;
   }
     
