--- a/src/pages/ContactPage/ContactPage.module.css
+++ b/src/pages/ContactPage/ContactPage.module.css
@@ -8,3 +8,33 @@
 }
 
 
+  /* RESPONSIVE */   
+
+
+  
+  /* RESPONSIVE */
+
+  /* Estilos para tabletas */
+  @media (min-width: 576px) and (max-width: 767.98px) {
+    .containerContact{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    
+    }
+  }
+
+
+@media (max-width: 575.98px) {
+    .containerContact{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    
+    }.contactForm {
+    width: 100%;
+  }
+}
+
+    
+
