--- a/src/pages/PortfolioPage/PortfolioPage.module.css
+++ b/src/pages/PortfolioPage/PortfolioPage.module.css
@@ -15,3 +15,42 @@
     
     text-align: center; /* Alineación del texto en el centro */
   }
+
+
+  /* RESPONSIVE */   
+@media (max-width: 1099.98px) {
+
+  .grid-container {
+    grid-template-columns: repeat(1, 1fr); /* Tres columnas de igual ancho */
+    grid-template-rows: repeat(2, auto); /* Dos filas de altura automática */
+    gap: 20px; /* Espacio entre las celdas */
+
+  }
+    
+}
+
+@media (max-width: 575.98px) {
+  /* Estilos para dispositivos móviles */
+}
+
+/* Estilos para tabletas */
+@media (min-width: 576px) and (max-width: 767.98px) {
+  .grid-container {
+
+    grid-template-columns: repeat(2, 1fr); /* Tres columnas de igual ancho */
+    grid-template-rows: repeat(2, auto); /* Dos filas de altura automática */
+    gap: 20px; /* Espacio entre las celdas */
+
+  }
+}
+
+/* Estilos para pantallas más grandes */
+@media (min-width: 768px) and (max-width: 1099.97px) {
+  .grid-container {
+
+    grid-template-columns: repeat(2, 1fr); /* Tres columnas de igual ancho */
+    grid-template-rows: repeat(2, auto); /* Dos filas de altura automática */
+    gap: 20px; /* Espacio entre las celdas */
+
+  }
+}
