--- a/src/components/MyIntroProfile/MyIntroProfile.module.css
+++ b/src/components/MyIntroProfile/MyIntroProfile.module.css
@@ -1,6 +1,6 @@
 
 .containerProfile{
-    background: #BD34FE;
+    /* background: #BD34FE; */
     width: 100%;
     height: 100%;
     display: flex;
@@ -9,6 +9,25 @@
     align-items: center;
     padding: 12px 0px;
 
+     /* Imagen de fondo */
+    background-image: url('../../assets/portada.jpg');
+    background-size: cover; /* Ajusta la imagen para cubrir todo el contenedor */
+    background-position: center; /* Centra la imagen */
+    background-repeat: no-repeat; /* Evita la repetición de la imagen */
+
+     /* Degradado superpuesto */
+    position: relative; /* Para posicionar correctamente el degradado */
+
+}
+
+.containerProfile::before {
+    content: ''; /* Añade un pseudo-elemento antes del contenido */
+    position: absolute; /* Lo coloca encima de la imagen de fondo */
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.4), #BD34FE); /* Degradado negro a #BD34FE */
 }
 
 
@@ -18,6 +37,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
 
 }
 .img {
