--- a/src/components/MyProfile/MyProfile.module.css
+++ b/src/components/MyProfile/MyProfile.module.css
@@ -10,6 +10,27 @@
     align-items: center;
     border-bottom-left-radius: 2rem;
     border-top-left-radius: 2rem;
+    overflow: hidden;
+
+
+    /* Imagen de fondo */
+    background-image: url('../../assets/portada.jpg');
+    background-size: cover; /* Ajusta la imagen para cubrir todo el contenedor */
+    background-position: center; /* Centra la imagen */
+    background-repeat: no-repeat; /* Evita la repetición de la imagen */
+
+    /* Degradado superpuesto */
+    position: relative; /* Para posicionar correctamente el degradado */
+}
+
+.containerProfile::before {
+    content: ''; /* Añade un pseudo-elemento antes del contenido */
+    position: absolute; /* Lo coloca encima de la imagen de fondo */
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.6), #BD34FE); /* Degradado negro a #BD34FE */
 }
 
 
@@ -18,7 +39,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
+    position: relative;
 }
 
 .head{
@@ -26,6 +47,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.btn {
+    position: relative;
 }
 
 
@@ -55,6 +80,7 @@
 
 .copyright{
     display: inline-block;
+    position: relative;
 }
 
 
