--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -40,6 +40,7 @@
   }
   
   .button {
+    margin-top: 1rem;
     padding: 10px 20px;
     border: 2px solid transparent;
     border-radius: 5px;
@@ -52,6 +53,22 @@
     background-color: #BD34FE;
     color: white;
     /* border-color: #BD34FE; */
+  }
+
+  .buttonDisabled{
+    margin-top: 1rem;
+    padding: 10px 20px;
+    border: transparent;
+    border-radius: 5px;
+    background-color: transparent;
+    cursor: pointer;
+    background-color: rgb(209, 209, 209);
+  }
+
+  .errorsSize {
+    font-size: 0.7rem;
+    margin: 0;
+    margin-left: 0.5rem;
   }
 
 
